# Lab_Tricolor

./: .gitignore  CMakeLists.txt  package.xml
.cache/clangd/index/: ik_client.h.75DBBAABF836C8A3.idx  jacobian.cpp.A5427289E047F30B.idx  sort_ball.cpp.45CD44ED40FBA84E.idx  sort_ball.hpp.3773D21BF310A0FF.idx  step_node.hpp.3E554DC8C460557A.idx
include/lab_sort/: lab_sort.hpp  step_node.hpp  utilities.hpp
include/lab_tricolor/: eigen.h  lab_sort.hpp  sort_ball.hpp  step_node.hpp  utilities.hpp
src/: jacobian.cpp  lab_sort.cpp  sort_ball.cpp
