<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab_tricolor</name>
  <version>0.0.1</version>
  <description>ECN ROS2 lab on sorting colored ball</description>
  <maintainer email="geoffrey.cote@centraliens-nantes.org">Geoffrey CÔTE</maintainer>
  <maintainer email="timothee.corroenne@eleves.ec-nantes.fr">Timothée CORROËNNE</maintainer>
  <maintainer email="chiara.de-saint-giniez--trinh@eleves.ec-nantes.fr">Chiara DE-SAINT-GINIEZ-TRINH</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
