<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab_sort_p</name>
  <version>1.0.0</version>
  <description>ECN ROS2 lab on sorting colored ball</description>
  <maintainer email="geoffrey.cote@centraliens-nantes.org">Geoffrey CÔTE</maintainer>
  <maintainer email="timothee.corroenne@centraliens-nantes.org">Timothée CORROËNNE</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>baxter_core_msgs</depend>
  <depend>std_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>ament_index_cpp</depend>
  <depend>sensor_msgs</depend>
  <depend>ecn_baxter</depend>


  <depend>frames</depend>
  <depend>urdf</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>

  <depend>robot_state_publisher</depend>

  <depend>Eigen3</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>


  <member_of_group>rosidl_interface_packages</member_of_group>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
